--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development, I have a track record of delivering high-quality, reliable software products."
     />
+    <meta name="og:title" content="Chiheb Chikhaoui"/>
+    <meta name="og:description" content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development, I have a track record of delivering high-quality, reliable software products."/>
+    <meta name="og:image" content="%PUBLIC_URL%/MetaImage"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
