--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer" />
   <meta property="og:description" content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development." />
   <meta property="og:image"
-    content="/src/assets/img/MetaImage.png"/>
+    content="https://photos.app.goo.gl/RpBfyeQVNcaizv9h8"/>
   <meta name="twitter:card" content="summary-large"/>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
