--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,30 @@
   <link rel="icon" href="%PUBLIC_URL%/icon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property="og:url"
-    content="https://chiheb-chikhaoui.netlify.app/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer" />
-  <meta property="og:description" content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development." />
-  <meta property="og:image"
-    content="https://photos.app.goo.gl/RpBfyeQVNcaizv9h8"/>
-  <meta name="twitter:card" content="summary-large"/>
+
+
+  <meta name="title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer">
+  <meta name="description"
+    content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://chiheb-chikhaoui.netlify.app/">
+  <meta property="og:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer">
+  <meta property="og:description"
+    content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
+  <meta property="og:image" content="https://photos.app.goo.gl/RpBfyeQVNcaizv9h8">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://chiheb-chikhaoui.netlify.app/">
+  <meta property="twitter:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer">
+  <meta property="twitter:description"
+    content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
+  <meta property="twitter:image" content="https://photos.app.goo.gl/RpBfyeQVNcaizv9h8">
+
+
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
