--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer">
   <meta property="og:description"
     content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
-  <meta property="og:image" content="%PUBLIC_URL%/MetaImage.png">
+  <meta property="og:image" content="/meta.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
   <meta property="twitter:title" content="Chiheb Chikhaoui - Software Engineer, Web Developer, Mobile Developer">
   <meta property="twitter:description"
     content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
-  <meta property="twitter:image" content="%PUBLIC_URL%/MetaImage.png">
+  <meta property="twitter:image" content="/meta.png">
 
 
 
