add google search console

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     content="Multi-skilled Software Engineer with a passion for creating intuitive, user-centered digital experiences. With experience in both mobile and web development.">
   <meta property="twitter:image" content="/meta.png">
 
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="dkQb7jTh9vjUpGhzp4NeFrBxWNumTfSE-93zuWD0JXs" />
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
